--- a/amplify.yml
+++ b/amplify.yml
@@ -14,6 +14,10 @@ frontend:
     baseDirectory: dist
     files:
       - "**/*"
+  cache:
+    paths:
+      - .npm/**/*
+      - node_modules/**/*
 # frontend:
 #   phases:
 #     build:
